--- a/index.html
+++ b/index.html
@@ -19,18 +19,14 @@
       <div id="question-container">
         <h2 id="question">Question will appear here</h2>
       </div>
-      <div id="options-container">
-        <button class="option">Option 1</button>
-        <button class="option">Option 2</button>
-        <button class="option">Option 3</button>
-        <button class="option">Option 4</button>
-      </div>
+      <div id="options-container"></div>
       <div id="navigation">
-        <button id="prev-btn" style="display: none;">Previous</button>
+        <button id="prev-btn">Previous</button>
         <button id="next-btn">Next</button>
       </div>
     </section>
   </main>
+  <!-- Link JavaScript at the end of the body -->
   <script src="script.js"></script>
 </body>
 </html>
