Updated quiz functionality: added skip button, restart button, and fixed Timer issues.

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       <div id="options-container"></div>
       <div id="navigation">
         <button id="prev-btn">Previous</button>
-        <button id="next-btn">Next</button>
+        <button id="next-btn">Skip</button>
       </div>
+      <div id="restart-btn-container" style="display: none;"></div>
     </section>
   </main>
-  <!-- Link JavaScript at the end of the body -->
   <script src="script.js"></script>
 </body>
 </html>
