--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <div class="header-content">
             <h1>TriviaTime: Python Quiz</h1>
             <p class="header-subtitle">Test your Python knowledge!</p>
+            <div id="category-info" class="category-info">
+                <span id="category-icon"></span>
+                <span id="category-name"></span>
+            </div>
         </div>
     </header>
 
@@ -87,7 +91,7 @@
     <section id="restart-btn-container" class="restart-btn-container" style="display: none;">
         <button onclick="restartQuiz()">Restart Quiz</button>
     </section>
-    
+
     <script src="script.js"></script>
 </body>
 
