--- a/index.html
+++ b/index.html
@@ -74,17 +74,19 @@
 
     <!-- Quiz Section -->
     <section id="quiz-container" style="display: none;">
-      <div id="question-container"></div>
-      <div id="options-container"></div>
-      <div id="navigation">
-          <button id="prev-btn" disabled>Prev</button>
-          <button id="next-btn">Skip</button>
-          <button id="exit-btn" style="display:none;">Exit</button>
-      </div>
-      <div id="timer"></div>
-      <div id="progress-bar-container">
-          <div id="progress-bar"></div>
-      </div>
+        <div id="question-number"></div>
+        <div id="question-container" class="fade-in"></div>
+        <div id="options-container"></div>
+        <div id="feedback-container" style="display: none;"></div>
+        <div id="navigation">
+            <button id="prev-btn" disabled>Prev</button>
+            <button id="next-btn">Next</button>
+            <button id="exit-btn" style="display:none;">Exit</button>
+        </div>
+        <div id="timer"></div>
+        <div id="progress-bar-container">
+            <div id="progress-bar"></div>
+        </div>
     </section>
 
     <!-- Restart Button Section -->
